cluster/tap/kapp-gui/resources-dev.yaml
#@ load("@ytt:data", "data")
#@yaml/text-templated-strings
---
kind: Deployment
apiVersion: apps/v1
metadata:  
  name: #@ data.values.service.name +"-app"
  labels:
    app: #@ data.values.service.name+ "-app"
    group: micro-pet
spec:
  replicas: #@ data.values.service.replicas
  selector:
    matchLabels:
      app: #@ data.values.service.name+ "-app"
      group: micro-pet
  template:
    metadata:
      labels:
        app: #@ data.values.service.name+ "-app"
        group: micro-pet
    spec:
      volumes:
        - name: config-volume
          configMap:
            name:  #@ data.values.service.name + "-config"
            items:            
            - key: config.json
              path: config.json                        
      containers:
        - name: #@ data.values.service.name
          image: #@ data.values.service.image
          imagePullPolicy: Always
          ports:
            - name: #@ data.values.service.name+ "-http"
              containerPort: #@ data.values.service.port
          volumeMounts:
            - name: config-volume
              mountPath: #@ data.values.service.config_path                    
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: #@ data.values.service.name +"-service"
  labels:
    app: #@ data.values.service.name+ "-app"
    group: micro-pet
spec:
  ports:
    - protocol: TCP
      name: #@ data.values.service.name+ "-http"
      port: #@ data.values.service.port
  selector:
    app: #@ data.values.service.name+ "-app"
    group: micro-pet
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: #@ data.values.service.name + "-ingress"
spec:
  rules:
    - host: #@ data.values.service.virtual_host
      http:
        paths:
          - path: #@ "/"+ data.values.service.name
            backend:
              serviceName:  #@ data.values.service.name +"-service"
              servicePort: #@ data.values.service.port
